// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationTypes renders for JOIN_CHALLENGE 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "lineHeight": 24,
              "paddingTop": 15,
              "textAlign": "center",
            },
          ]
        }
      >
        We are excited that you are participating in a challenge! MissionHub would like to send you updates about this challenge.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AllowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "backgroundColor": "#52C5DC",
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            ALLOW NOTIFICATIONS
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NotNowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#52C5DC",
                "borderWidth": 1,
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            NOT NOW
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for JOIN_COMMUNITY 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "lineHeight": 24,
              "paddingTop": 15,
              "textAlign": "center",
            },
          ]
        }
      >
        MissionHub would like to notify you about activity happening within your community.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AllowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "backgroundColor": "#52C5DC",
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            ALLOW NOTIFICATIONS
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NotNowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#52C5DC",
                "borderWidth": 1,
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            NOT NOW
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for LOGIN 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "lineHeight": 24,
              "paddingTop": 15,
              "textAlign": "center",
            },
          ]
        }
      >
        We noticed you have accepted some steps. We'd like to send you handcrafted reminders so they don't get forgotten.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AllowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "backgroundColor": "#52C5DC",
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            ALLOW NOTIFICATIONS
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NotNowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#52C5DC",
                "borderWidth": 1,
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            NOT NOW
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for ONBOARDING 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "marginBottom": 88,
          },
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#ffffff",
                "fontSize": 24,
                "fontWeight": "300",
                "lineHeight": 30,
                "textAlign": "center",
              },
            ]
          }
        >
          Allow notifications for
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#ffffff",
                "fontSize": 24,
                "fontWeight": "300",
                "lineHeight": 30,
                "textAlign": "center",
              },
            ]
          }
        >
          reminders on steps of faith
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 88,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/notificationPrimerScreen.png",
            }
          }
        />
        <Image
          source={
            Object {
              "testUri": "../../../assets/images/notificationPrimerNotif.png",
            }
          }
          style={
            Object {
              "position": "absolute",
              "top": "50%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": -50,
            "paddingTop": 20,
          },
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AllowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "backgroundColor": "#52C5DC",
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            ALLOW NOTIFICATIONS
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NotNowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#52C5DC",
                "borderWidth": 1,
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            NOT NOW
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;

exports[`notificationTypes renders for SET_REMINDER 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 40,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 0.6,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#ffffff",
              "fontSize": 16,
              "lineHeight": 24,
              "paddingTop": 15,
              "textAlign": "center",
            },
          ]
        }
      >
        We want to help you take this Step of Faith! In order to set a reminder we need to be able to send you notifications.
      </Text>
    </View>
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="AllowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "#007398",
                "height": 60,
                "justifyContent": "center",
              },
              null,
              Object {
                "backgroundColor": "#52C5DC",
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            ALLOW NOTIFICATIONS
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="NotNowButton"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#52C5DC",
                "borderWidth": 1,
                "height": 48,
                "margin": 8,
                "width": 680,
              },
              Object {
                "borderRadius": 50,
              },
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                  },
                ],
              ]
            }
          >
            NOT NOW
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "flex": 0.3,
        },
      ]
    }
  />
</View>
`;
